--- a/country-search/src/Components/country-search.css
+++ b/country-search/src/Components/country-search.css
@@ -24,7 +24,7 @@
     margin-top: 30px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
    flex-wrap: wrap;
    gap: 20px;
 }
